# tisql

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  TESTING.md
.github/workflows/: ci.yml
benches/: clog_service.rs  e2e_oltp_bench.rs  memtable_bench.rs  memtable_comparison.rs  memtable_impl_comparison.rs  sql_executor.rs  tablet_engine.rs  transaction_service.rs
benches/common/: mod.rs
doc/: ARCHITECTURE.md  CLAUDE.md
docs/design/: log-service-design.md
scripts/: coverage.sh  run_bench.sh  run_integration_test_cases.sh  run_lib_test.sh  run_mysqltest_cases.sh  run_store_test.sh  run_with_timeout.sh
src/: error.rs  lib.rs  lsn.rs  main.rs  runtime.rs  types.rs
src/catalog/: auto_increment.rs  memory.rs  mod.rs  mvcc.rs  types.rs
src/clog/: file.rs  group_commit.rs  mod.rs
src/codec/: bytes.rs  key.rs  mod.rs  number.rs  row.rs
src/concurrency/: mod.rs
src/executor/: mod.rs  simple.rs  simple_support.rs
src/inner_table/: bootstrap.rs  catalog_loader.rs  core_tables.rs  gc_worker.rs  mod.rs
src/io/: aligned_buf.rs  dma_file.rs  mod.rs  service.rs
src/kernel/: execution.rs  manifest.rs  mod.rs  txn_storage.rs
src/log/: ilog.rs  lsn.rs  mod.rs
src/log/clog/: file.rs  group_buffer.rs  group_commit.rs  mod.rs  writer.rs
src/protocol/: mod.rs  mysql.rs  point_get_short.rs
src/session/: mod.rs
src/sql/: binder.rs  mod.rs  parser.rs  plan.rs  show_create.rs
src/storage/: arena_memtable.rs  btree_memtable.rs  commit_reservations.rs  compaction.rs  compaction_scheduler.rs  config.rs  crossbeam_memtable.rs  flush_scheduler.rs  ilog.rs  lsm.rs  memtable.rs  mod.rs  mvcc.rs  mvcc_memtable.rs  recovery.rs  skiplist.rs  version.rs  version_set.rs
src/storage/memtable/: arena_memtable.rs  arena_skiplist.rs  btree_memtable.rs  crossbeam_memtable.rs  mod.rs  versioned_memtable.rs  wrapper.rs
src/storage/sstable/: block.rs  builder.rs  iterator.rs  mod.rs  reader.rs
src/tablet/: commit_reservations.rs  compaction.rs  compaction_scheduler.rs  config.rs  engine.rs  flush_scheduler.rs  lsm.rs  manager.rs  mod.rs  mvcc.rs  recovery.rs  routed_storage.rs  router.rs  status_reporter.rs  version.rs  version_set.rs
src/tablet/cache/: block_cache.rs  key.rs  mod.rs  reader_cache.rs  row_cache.rs  suite.rs
src/tablet/memtable/: mod.rs  versioned_memtable.rs  wrapper.rs
src/tablet/sstable/: block.rs  bloom.rs  builder.rs  iterator.rs  mod.rs  reader.rs
src/transaction/: api.rs  concurrency.rs  handle.rs  mod.rs  service.rs  snapshot.rs  txn_state_cache.rs
src/tso/: local.rs  mod.rs
src/util/: arena.rs  error.rs  fs.rs  hash.rs  log.rs  mod.rs  mysql_text.rs  timing.rs
src/util/codec/: bytes.rs  key.rs  number.rs  row.rs
src/util/io/: accounting.rs  dma_file.rs  mod.rs  service.rs
src/worker/: mod.rs
tests/: concurrency_test.rs  concurrent_storage_test.rs  drop_table_gc_test.rs  linearizability_test.rs  memtable_stress_test.rs  mysql_protocol_concurrent_txn_test.rs  mysql_protocol_test.rs  pessimistic_txn_ported_test.rs  rocksdb_ported_compaction_tests.rs  rocksdb_ported_tests.rs  storage_failpoint_test.rs  store_test.rs  testkit.rs  txn_durability_tests.rs
tests/integrationtest/: README.md  run-tests.sh  runner.rs
tests/integrationtest/r/crud/: basic.result  ddl.result  ddl_if_exists.result  delete.result  insert.result  select.result  update.result
tests/integrationtest/r/error/: basic.result  duplicate_key.result  duplicate_key_composite.result  duplicate_key_update_pk.result
tests/integrationtest/r/expr/: aggregate.result  arithmetic.result  comparison.result
tests/integrationtest/r/session/: use_database.result
tests/integrationtest/r/transaction/: concurrent_autocommit_explicit.result  explicit_txn_survives_error.result  no_dirty_read_uncommitted_insert.result  no_dirty_read_uncommitted_update.result  rollback_clears_pending_writes.result  rollback_releases_all_locks.result  txn_context_cleared_after_rollback.result  write_write_conflict_insert.result
tests/integrationtest/r/txn/: pessimistic_lock_flow.r
tests/integrationtest/t/crud/: basic.test  ddl.test  ddl_if_exists.test  delete.test  insert.test  select.test  update.test
tests/integrationtest/t/error/: basic.test  duplicate_key.test  duplicate_key_composite.test  duplicate_key_update_pk.test
tests/integrationtest/t/expr/: aggregate.test  arithmetic.test  comparison.test
tests/integrationtest/t/session/: use_database.test
tests/integrationtest/t/transaction/: concurrent_autocommit_explicit.test  explicit_txn_survives_error.test  no_dirty_read_uncommitted_insert.test  no_dirty_read_uncommitted_update.test  rollback_clears_pending_writes.test  rollback_releases_all_locks.test  txn_context_cleared_after_rollback.test  write_write_conflict_insert.test
tests/integrationtest/t/txn/: pessimistic_lock_flow.t
tisql/: Cargo.toml
tisql/doc/: ARCHITECTURE.md  CLAUDE.md
tisql/src/: error.rs
tisql/src/catalog/: memory.rs
tisql/src/executor/: simple.rs
tisql/src/protocol/: mysql.rs
tisql/src/storage/: encoding.rs  memtable.rs
tisql/src/util/: log.rs  mod.rs
tools/: sysbench_sim.rs
