[package]
name = "tisql"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A minimal SQL database in Rust with MySQL protocol support"
repository = "https://github.com/cfzjywxk/tisql"
default-run = "tisql"

[dependencies]
# SQL parsing
sqlparser = "0.40"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
bincode = "1.3"
serde = { version = "1", features = ["derive"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Bytes handling
bytes = "1"

# Regex for LIKE matching
regex = "1"

# MySQL protocol server
opensrv-mysql = "0.7"
async-trait = "0.1"

# Command line parsing
clap = { version = "4", features = ["derive"] }

# Thread pool for database work
yatp = { git = "https://github.com/tikv/yatp.git" }
num_cpus = "1"

# Concurrent data structures for MVCC
crossbeam-skiplist = "0.1"
crossbeam-epoch = "0.9"

# Memory allocator (jemalloc for production, like TiKV)
[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { version = "0.5", optional = true }

# Fail injection testing
[dependencies.fail]
version = "0.5"
optional = true

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
fail = "0.5"
parking_lot = "0.12"

[features]
default = ["jemalloc"]
jemalloc = ["tikv-jemallocator"]
failpoints = ["fail/failpoints"]
# Enable legacy memtable engines for benchmarking comparisons
bench = []

[[bench]]
name = "memtable_bench"
harness = false

[[bench]]
name = "memtable_comparison"
harness = false

[[bench]]
name = "memtable_impl_comparison"
harness = false

[[bench]]
name = "e2e_oltp_bench"
harness = false

[[bin]]
name = "sysbench-sim"
path = "tools/sysbench_sim.rs"

[[bin]]
name = "mysqltest-runner"
path = "tests/integrationtest/runner.rs"

[[test]]
name = "store_test"
path = "tests/store_test.rs"

[[test]]
name = "concurrency_test"
path = "tests/concurrency_test.rs"
