[package]
name = "tisql"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A minimal SQL database in Rust with MySQL protocol support"
repository = "https://github.com/cfzjywxk/tisql"
default-run = "tisql"

[dependencies]
# SQL parsing
sqlparser = "0.40"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
bincode = "1.3"
serde = { version = "1", features = ["derive"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Bytes handling
bytes = "1"
itoa = "1"
ryu = "1"

# Regex for LIKE matching
regex = "1"

# MySQL protocol server
opensrv-mysql = "0.7"
async-trait = "0.1"

# Command line parsing
clap = { version = "4", features = ["derive"] }

# Concurrent data structures for MVCC
crossbeam-skiplist = "0.1"
crossbeam-epoch = "0.9"
crossbeam-channel = "0.5"
dashmap = "5"
hashlink = "0.9"

# Fast synchronous locks (spin-then-park, no poisoning)
parking_lot = "0.12"

# io_uring for async I/O (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"

# Memory allocator (jemalloc for production, like TiKV)
[target.'cfg(unix)'.dependencies]
libc = "0.2"
tikv-jemallocator = { version = "0.5", optional = true }

# Fail injection testing
[dependencies.fail]
version = "0.5"
optional = true

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
fail = "0.5"
futures = "0.3"
parking_lot = "0.12"
mysql_async = "0.34"

[features]
default = ["jemalloc"]
jemalloc = ["tikv-jemallocator"]
failpoints = ["fail/failpoints"]

[[bin]]
name = "sysbench-sim"
path = "tools/sysbench_sim.rs"

[[bin]]
name = "mysqltest-runner"
path = "tests/integrationtest/runner.rs"

[[test]]
name = "store_test"
path = "tests/store_test.rs"

[[test]]
name = "concurrency_test"
path = "tests/concurrency_test.rs"

[[test]]
name = "mysql_protocol_test"
path = "tests/mysql_protocol_test.rs"

# ============================================================================
# Profile settings
# ============================================================================

[profile.dev]
debug = 2
opt-level = 0
lto = false
debug-assertions = true
overflow-checks = true

# Production release: max optimization (slower compile, fastest binary).
# References TiKV's release + dist_release profiles.
[profile.release]
opt-level = 3
# Thin LTO: cross-crate inlining with ~2x compile cost (fat LTO is ~4x for marginal gain).
lto = "thin"
# Single codegen unit: lets LLVM optimize across the whole crate.
codegen-units = 1
# No debug symbols in release binary (use release-with-debug for profiling).
debug = false
# Disable incremental: full rebuild ensures maximum optimization.
incremental = false
# Keep overflow checks: correctness-first policy — arithmetic bugs must not go silent.
overflow-checks = true
# Keep debug assertions: TiSQL is in fast-dev, invariant checks are worth the cost.
debug-assertions = true

# Profiling release: same optimizations + full debug symbols for perf/pprof.
[profile.release-with-debug]
inherits = "release"
debug = 2

# Benchmark profile: match release settings so bench numbers reflect production.
[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
incremental = false
overflow-checks = false
debug-assertions = false
